--- a/Workshop 2/.classpath
+++ b/Workshop 2/.classpath
@@ -6,5 +6,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/ahmad/Desktop/1dv607/Workshop 2/jar files to include/jackson-annotations-2.10.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ahmad/Desktop/1dv607/Workshop 2/jar files to include/jackson-core-2.10.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ahmad/Desktop/1dv607/Workshop 2/jar files to include/jackson-databind-2.10.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ahmad/Desktop/1dv607/Workshop 2/jar files to include/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
